# app/models/Geofence.php
@@ -1,7 +1,7 @@
 <?php
 /**
  * @author     Martin Høgh <mh@mapcentia.com>
- * @copyright  2013-2021 MapCentia ApS
+ * @copyright  2013-2023 MapCentia ApS
  * @license    http://www.gnu.org/licenses/#AGPL  GNU AFFERO GENERAL PUBLIC LICENSE 3
  *
  */
@@ -11,6 +11,7 @@ namespace app\models;
 use app\inc\Model;
 use app\inc\UserFilter;
 use Exception;
+use PDOException;
 use sad_spirit\pg_builder\Statement;
 use sad_spirit\pg_builder\StatementFactory;
 
@@ -25,24 +26,25 @@ class Geofence extends Model
      * @var UserFilter
      */
     private UserFilter $userFilter;
-
     public const ALLOW_ACCESS = "allow";
     public const DENY_ACCESS = "deny";
     public const LIMIT_ACCESS = "limit";
 
     /**
      * Geofencing constructor.
-     * @param UserFilter $userFilter
+     * @param UserFilter|null $userFilter
      */
-    public function __construct(UserFilter $userFilter)
+    public function __construct(UserFilter|null $userFilter)
     {
         parent::__construct();
-        $this->userFilter = $userFilter;
+        if ($userFilter) {
+            $this->userFilter = $userFilter;
+        }
     }
 
     /**
-     * @param array<mixed> $rules
-     * @return array<mixed>
+     * @param array $rules
+     * @return array
      */
     public function authorize(array $rules): array
     {
@@ -73,15 +75,14 @@ class Geofence extends Model
 
     /**
      * @param Statement $statement
-     * @param Sql $model
-     * @param array<string> $filters
-     * @return array<mixed>
+     * @param array $rules
+     * @return bool
      * @throws Exception
      */
     public function postProcessQuery(Statement $statement, array $rules): bool
     {
         $filters = $this->authorize($rules)["filters"];
-        if (sizeof($filters) == 0) {
+        if (empty($filters["write"])) {
             return true;
         }
         $model = new Model();
@@ -101,8 +102,115 @@ class Geofence extends Model
             throw new Exception('LIMIT ERROR');
         }
         $model->rollback();
-
         return true;
     }
 
+    /**
+     * @return array
+     */
+    public function get(): array
+    {
+        $sql = "select * from settings.geofence order by id";
+        try {
+            $res = $this->prepare($sql);
+            $res->execute();
+        } catch (PDOException $e) {
+            $response['success'] = false;
+            $response['message'] = $e->getMessage();
+            $response['code'] = 400;
+            return $response;
+        }
+        $response['success'] = true;
+        $response['data'] = $this->fetchAll($res, "assoc");
+        return $response;
+    }
+
+    /**
+     * @param array $data
+     * @return array
+     */
+    public function create(array $data): array
+    {
+        $props = array_keys($data);
+        $fields = implode(",", $props);
+        $values = implode(",:", $props);
+        if (sizeof($props) > 1) {
+            $fields = ", $fields";
+            $values = ", :$values";
+        }
+        $sql = "insert into settings.geofence (id $fields) values (default $values) returning *";
+        $res = $this->prepare($sql);
+        try {
+            $res->execute($data);
+        } catch (PDOException $e) {
+            $response['success'] = false;
+            $response['message'] = $e->getMessage();
+            $response['code'] = 400;
+            return $response;
+        }
+        $response['success'] = true;
+        $response['data'] = $this->fetchRow($res);
+        return $response;
+    }
+
+    /**
+     * @param array $data
+     * @return array
+     */
+    public function update(array $data): array
+    {
+        $props = array_keys($data);
+        if (!in_array("id", $props)) {
+            $response['success'] = false;
+            $response['message'] = "id is missing";
+            $response['code'] = 400;
+            return $response;
+        }
+        if (sizeof($props) < 2) {
+            $response['success'] = false;
+            $response['message'] = "Nothing to be set";
+            $response['code'] = 400;
+            return $response;
+        }
+        $sets = [];
+        foreach ($props as $prop) {
+            $sets[] = "$prop=:$prop";
+        }
+        $setsStr = implode(",", $sets);
+        $sql = "update settings.geofence set $setsStr where id=:id returning *";
+        $res = $this->prepare($sql);
+        try {
+            $res->execute($data);
+        } catch (PDOException $e) {
+            $response['success'] = false;
+            $response['message'] = $e->getMessage();
+            $response['code'] = 400;
+            return $response;
+        }
+        $response['success'] = true;
+        $response['data'] = $this->fetchRow($res);
+        return $response;
+
+    }
+
+    /**
+     * @param int $id
+     * @return array
+     */
+    public function delete(int $id): array
+    {
+        $sql = "delete from settings.geofence where id=:id returning id";
+        try {
+            $res = $this->prepare($sql);
+            $res->execute(["id" => $id]);
+        } catch (PDOException $e) {
+            $response['success'] = false;
+            $response['message'] = $e->getMessage();
+            $response['code'] = 400;
+            return $response;
+        }
+        $response['success'] = true;
+        $response['data'] = $this->fetchRow($res);
+        return $response;
+    }
 }
