# public/swagger/v3/api.json
@@ -296,18 +296,288 @@
                 ]
             }
         },
-        "/api/v3/geofence/{jobId}": {
+        "/api/v3/geofence": {
             "get": {
                 "tags": [
-                    "Scheduler"
+                    "Geofence"
                 ],
-                "summary": "Start scheduled job by id.",
-                "operationId": "6c8f57a601cbcceb510ab364456f3c36",
+                "summary": "Get all geofence rules",
+                "operationId": "af6def7bb6e44d8d8d75a1c0bb5dbeab",
+                "responses": {
+                    "200": {
+                        "description": "List of geofence rules",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "object"
+                                            }
+                                        },
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Geofence"
+                ],
+                "summary": "Updates a geofence rule",
+                "operationId": "f979d6135a7c3d1b349c6b9e4dec4e98",
+                "requestBody": {
+                    "description": "Geofence JSON rule with id property",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "priority": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "username": {
+                                        "type": "string",
+                                        "example": "joe"
+                                    },
+                                    "service": {
+                                        "type": "string",
+                                        "example": "sql"
+                                    },
+                                    "request": {
+                                        "type": "string",
+                                        "example": "*"
+                                    },
+                                    "layer": {
+                                        "type": "string",
+                                        "example": "*"
+                                    },
+                                    "schema": {
+                                        "type": "string",
+                                        "example": "*"
+                                    },
+                                    "access": {
+                                        "type": "string",
+                                        "example": "limit"
+                                    },
+                                    "read_filter": {
+                                        "type": "string",
+                                        "example": "userid='joe'"
+                                    },
+                                    "write_filter": {
+                                        "type": "string",
+                                        "example": "userid='joe'"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "The changed created geofence rule",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "priority": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "username": {
+                                            "type": "string",
+                                            "example": "joe"
+                                        },
+                                        "service": {
+                                            "type": "string",
+                                            "example": "sql"
+                                        },
+                                        "request": {
+                                            "type": "string",
+                                            "example": "*"
+                                        },
+                                        "layer": {
+                                            "type": "string",
+                                            "example": "*"
+                                        },
+                                        "schema": {
+                                            "type": "string",
+                                            "example": "*"
+                                        },
+                                        "access": {
+                                            "type": "string",
+                                            "example": "limit"
+                                        },
+                                        "read_filter": {
+                                            "type": "string",
+                                            "example": "userid='joe'"
+                                        },
+                                        "write_filter": {
+                                            "type": "string",
+                                            "example": "userid='joe'"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Geofence"
+                ],
+                "summary": "Create a new geofence rule",
+                "operationId": "e997607536ab7cb50120cc46cf45a6c6",
+                "requestBody": {
+                    "description": "Geofence JSON rule",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "priority": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "username": {
+                                        "type": "string",
+                                        "example": "joe"
+                                    },
+                                    "service": {
+                                        "type": "string",
+                                        "example": "sql"
+                                    },
+                                    "request": {
+                                        "type": "string",
+                                        "example": "*"
+                                    },
+                                    "layer": {
+                                        "type": "string",
+                                        "example": "*"
+                                    },
+                                    "schema": {
+                                        "type": "string",
+                                        "example": "*"
+                                    },
+                                    "access": {
+                                        "type": "string",
+                                        "example": "limit"
+                                    },
+                                    "read_filter": {
+                                        "type": "string",
+                                        "example": "userid='joe'"
+                                    },
+                                    "write_filter": {
+                                        "type": "string",
+                                        "example": "userid='joe'"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "The newly created geofence rule",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "priority": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "username": {
+                                            "type": "string",
+                                            "example": "joe"
+                                        },
+                                        "service": {
+                                            "type": "string",
+                                            "example": "sql"
+                                        },
+                                        "request": {
+                                            "type": "string",
+                                            "example": "*"
+                                        },
+                                        "layer": {
+                                            "type": "string",
+                                            "example": "*"
+                                        },
+                                        "schema": {
+                                            "type": "string",
+                                            "example": "*"
+                                        },
+                                        "access": {
+                                            "type": "string",
+                                            "example": "limit"
+                                        },
+                                        "read_filter": {
+                                            "type": "string",
+                                            "example": "userid='joe'"
+                                        },
+                                        "write_filter": {
+                                            "type": "string",
+                                            "example": "userid='joe'"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v3/geofence/{id}": {
+            "delete": {
+                "tags": [
+                    "Geofence"
+                ],
+                "summary": "Deletes a geofence rule",
+                "operationId": "f610d0ad39eb518fc95d27ca71333222",
                 "parameters": [
                     {
-                        "name": "jobId",
+                        "name": "id",
                         "in": "path",
-                        "description": "Job identifier",
+                        "description": "Id of geofence rule",
                         "required": true,
                         "schema": {
                             "type": "string"
@@ -316,7 +586,25 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Operation status"
+                        "description": "Operation status",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 },
                 "security": [
